        **        In development, unstable         **
        **                                         **
        *********************************************

NEW FEATURES

  o  fread :
     * If some column names are blank they are now given default names rather than causing
       the header row to be read as a data row. Thanks to Simon Judes for suggesting.

     * "+" and "-" are now read as character rather than integer 0. Thanks to Alvaro Gonzalez for reporting.
       http://stackoverflow.com/questions/15388714/reading-strand-column-with-fread-data-table-package

BUG FIXES

  o  Fixed format errors of timings produced by fread(...,verbose=TRUE). Caused by recent
     changes from (double)currentTime() to (clock_t)clock() at C level to pass R-devel
     checks. Tests don't check the verbose output of fread() so it slipped through.

USER VISIBLE CHANGES

    o   := on a null data.table now gives a clearer error message :
          "Cannot use := to add columns to a null data.table (no columns), currently. You can use := 
           to add (empty) columns to an empty data.table (1 or more columns, all 0 length), though."
        rather than the untrue :
          "Cannot use := to add columns to an empty data.table, currently"

    o   data.table(NULL) now prints "Null data.table (0 rows and 0 cols)" and FAQ 2.5 has been
        improved. Thanks to:
          http://stackoverflow.com/questions/15317536/is-null-does-not-work-on-null-data-table-in-r-possible-bug

NOTES

    o   Tests 617,646 and 647 could sometimes fail (e.g. r-prerel-solaris-sparc on 7 Mar 2013)
        due to machine tolerance. Fixed.
        
    o   The default for datatable.alloccol has changed from max(100L, 2L*ncol(DT)) to max(100L, ncol(DT)+64L).
        And a pointer to ?truelength has been added to an error message as sugggested and thanks to Roland :
            http://stackoverflow.com/questions/15436356/potential-problems-from-over-allocating-truelength-more-than-1000-times